# korpix-core

./: .gitignore  CONTRIBUTING.md  KorPIX_Architecture_Whitepaper.md  LICENSE  README.md  ROADMAP.md  Roadmap.md  SECURITY.md  korpix-core  package.json  pyproject.toml  speech paper.md  tsconfig.json
api/: openapi.yaml
apps/ policy-dashboard/: package.json
audit-network/: gateway.py
docs/: KorPIX_UC001_파일럿_유스케이스.docx  KorPIX_UC002_AI투자자동화_파일럿.docx  KorPIX_UC003_AI기업구매승인_파일럿.docx  KorPIX_UC004_AI행정서비스_파일럿.docx  KorPIX_UC005_HW_TrustTerminal.docx  Pilot Use Case UC-001  Pilot Use Case UC-002  Pilot Use Case UC-003  Pilot Use Case UC-004  Pilot Use Case UC-005  ai_action_flow.md  architecture_diagram.md  logical_model.md  security_model.md  system_architecture.md  use_cases.md
examples/: sample_action_record.json  sample_action_request.json  sample_policy_rules.yaml
policy_engine/: decision-engine.py  risk-evaluator.py
schemas/: Action record.schema.json  action_record.schema.json  action_record_schema.json  action_request.schema.json  action_request_schema.json  policy_decision.schema.json  policy_decision_schema.json  risk_score.schema.json  risk_score_schema.json
scripts/: run_audit_network.sh  run_policy_engine.sh  seed_examples.py
standards/: KorPIX_Audit_Protocol.md  KorPIX_Policy_API.md  KorPIX_Terminal_Standard(old).md  KorPIX_Terminal_Standard.md  action-record.ts  audit-network.ts  index.ts  policy-engine.ts
tests/: test_decision_engine.py  test_gateway.py  test_risk_evaluator.py
whitepaper/: KorPIX_Architecture_Whitepaper.md
(+53 files in other folders)
