[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"
 
[project]
name = "korpix"
version = "0.1.0"
description = "KorPIX AI 행동 신뢰 인프라 — Policy Engine · Audit Network · Execution Gateway"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "cryptography>=42",
    "httpx>=0.27",
]
 
[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]
 
[tool.ruff]
line-length = 100
target-version = "py311"
 
[tool.mypy]
python_version = "3.11"
strict = true
 
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "services"]
 
